Test overflow fix

--- a/src/components/loading/Loading.scss
+++ b/src/components/loading/Loading.scss
@@ -3,15 +3,13 @@
 
 :root{
   overflow-y: auto;
-  // position: relative;
 }
 
 .loading-screen{
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   background-color: var(--background-color);
   z-index: 100;
   transition: 0.5s ease;
